--- a/css/desktop.css
+++ b/css/desktop.css
@@ -195,13 +195,45 @@ main {
     height: 500px;
 }
 
-/**/
+/*Here star main__section--quienessomos*/
 
-.main__section--quienessomos{
+
+.main__section--quienessomos {
+    padding: 0 90px 90px 90px;
     width: 100%;
-    height: 1000px;
-    background-color: red;
 }
+
+.main__section--quienessomos__title {
+    font-size: 4.8rem;
+    color: var(--principal-black-color);
+}
+
+.main__section--quienessomos__description {
+    font-size: 1.6rem;
+    color: var(--principal-black-color);
+    margin-top: 20px; /* Espacio entre el título y el párrafo */
+}
+
+.main__section--quienessomos__image {
+    width: 80%;
+    height: 400px;
+    object-fit: cover; /* Asegura que la imagen cubra el espacio asignado sin deformarse */
+    margin-top: 20px; /* Espacio entre el párrafo y la imagen */
+}
+
+/* Responsividad */
+@media (max-width: 768px) {
+    .main__section--quienessomos {
+        padding: 0 20px 20px 20px; /* Ajuste de padding para dispositivos más pequeños */
+    }
+
+    .main__section--quienessomos__image {
+        width: 100%; /* La imagen ocupa todo el ancho en dispositivos más pequeños */
+        height: auto; /* Altura automática para mantener la proporción */
+    }
+}
+
+
 
 
 /* This is the footer section */
