--- a/css/desktop.css
+++ b/css/desktop.css
@@ -201,17 +201,24 @@ main {
 .main__section--quienessomos {
     padding: 0 90px 90px 90px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Centra el contenido verticalmente si deseas */
+    min-height: 100vh; 
 }
 
 .main__section--quienessomos__title {
     font-size: 4.8rem;
     color: var(--principal-black-color);
+    text-align: center;
 }
 
 .main__section--quienessomos__description {
     font-size: 1.6rem;
     color: var(--principal-black-color);
     margin-top: 20px; /* Espacio entre el título y el párrafo */
+    text-align: center; /* Centra el texto del párrafo */
 }
 
 .main__section--quienessomos__image {
