--- a/css/desktop.css
+++ b/css/desktop.css
@@ -265,10 +265,12 @@ main {
     position: relative;
     width: calc(100% - 120px); /* Ajusta para las flechas */
     align-items: center;
-    gap: 26px;
+    gap: 30px;
     width: 100%;
     transition: transform 0.5s ease;
+    
 }
+
 
 /* Animation cards */
 
@@ -294,7 +296,7 @@ main {
         /* Cuando el dispositivo tiene un ancho mayor a 720px */
         @media (min-width: 720px) {
             .card {
-                min-width: 400px;
+                min-width: 390px;
             }
         }
 
@@ -390,27 +392,34 @@ main {
 /* Arrow code */
 
 .arrow {
-    display: none;
+    display: none; /* Inicialmente ocultas */
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: 60px;
     height: 60px;
-    background-color: var(--button-color); /* Ajusta este valor según tu esquema de color */
+    background-color: var(--button-color);
     border-radius: 50%;
     cursor: pointer;
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    z-index: 2; /* Asegúrate de que las flechas estén sobre el contenido */
+    z-index: 2; /* Asegura que estén sobre el contenido */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra suave */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición suave para transform y shadow */
+}
+
+.arrow:hover {
+    transform: translateY(-50%) scale(1.1); /* Efecto de levitación y crecimiento */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra más pronunciada al hacer hover */
 }
 
 .arrow-left { 
-    left: 0px; 
+    left: 15px; 
     display: none;
 }
 .arrow-right {
-    right: 0px; 
+    right: 15px; 
     display: none;
 }
 
