--- a/css/desktop.css
+++ b/css/desktop.css
@@ -431,6 +431,64 @@ main {
     display: flex; /* La flecha derecha se muestra solo al hacer hover */
 }
 
+/* Here start empresas que confian en nosotros code */
+
+.main__section--empresasQueConfian {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+    height: 60px;
+    padding: 0 40px 0 0;
+    background-color: var(--white-color);
+}
+
+.empresas-fijo {
+    margin-right: 30px; /* Espacio antes de la cinta corredora */
+    color: var(--principal-black-color);
+    font-size: 2rem;
+    font-weight: 700;
+    font-style: italic;
+    z-index: 2;
+    background-color: var(--white-color);
+    padding: 0 20px 0 40px;
+}
+
+.empresas-desplazamiento {
+    display: inline-block;
+    animation: desplazamiento 20s linear infinite; /* Ajusta la duración según la necesidad */
+    color: var(--button-color);
+    font-size: 2rem;
+    font-weight: 700;
+    z-index: 1;
+    
+    
+}
+
+.empresas-desplazamiento span {
+    margin-right: 30px; /* Espacio entre nombres de empresas */
+}
+
+@keyframes desplazamiento {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    10% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+}
+
+
+
 /* This is the footer section */
 
 .footer {
