--- a/css/desktop.css
+++ b/css/desktop.css
@@ -440,8 +440,10 @@ main {
     white-space: nowrap;
     width: 100%;
     height: 60px;
-    padding: 0 40px 0 0;
+    padding: 0 80px 0 0;
     background-color: var(--white-color);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .empresas-fijo {
@@ -471,23 +473,32 @@ main {
 }
 
 @keyframes desplazamiento {
-    /* Comienza ya en movimiento y visible */
-    0% {
+    from {
         transform: translateX(0%);
     }
-    50% {
-        transform: translateX(-100%);
-    }
-    50.1% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(0%);
+    to {
+        transform: translateX(-50%);
     }
 }
 
+/* Main section experiencia */
 
+.main__section--experiencia {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Crea 3 columnas de igual tamaño */
+    grid-template-rows: repeat(3, auto); /* Crea 3 filas que se ajustan al contenido */
+    gap: 20px; /* Espacio entre filas y columnas */
+    padding: 0 40px 40px 40px; /* Espacio alrededor del contenido dentro de la sección */
+    background-color: white; /* Color de fondo de la sección */
+}
 
+/* Main section contacto */
+
+.main__section--contacto{
+    width: 100%;
+    height: 400px;
+    background-color: green;
+}
 /* This is the footer section */
 
 .footer {
