--- a/css/desktop.css
+++ b/css/desktop.css
@@ -492,6 +492,16 @@ main {
     background-color: white; /* Color de fondo de la sección */
 }
 
+.card__transition{
+    transition: transform 500ms;
+    min-width: 400px;
+}
+
+.card__transition:hover{
+    transform: scale(1.1);
+    transition: transform 500ms;
+}
+
 /* Main section contacto */
 
 .main__section--contacto{
