--- a/css/desktop.css
+++ b/css/desktop.css
@@ -502,6 +502,50 @@ main {
     transition: transform 500ms;
 }
 
+/* Modal code */
+
+.modal-hidden {
+    display: none;
+}
+
+
+.modal-content {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    padding: 40px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    overflow-y: auto;
+    z-index: 1000; /* Asegura que el modal esté por encima de otros elementos */
+    max-height: 100vh ;
+}
+
+#close-modal {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--button-color); /* Asegúrate de tener esta variable CSS definida */
+    color: white;
+    font-size: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    cursor: pointer;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+
 /* Main section contacto */
 
 .main__section--contacto{
