I am working in the grid

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -519,6 +519,7 @@ main {
     padding: 40px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr); 
     gap: 20px;
     overflow-y: auto;
     z-index: 1000; /* Asegura que el modal esté por encima de otros elementos */
@@ -540,9 +541,7 @@ main {
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    
 }
 
 
