--- a/css/desktop.css
+++ b/css/desktop.css
@@ -101,9 +101,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between; /* Alinea los elementos al inicio, manteniendo el logo a la izquierda */
-    background-color: var(--white-color);
     font-size: 1.6rem;
-    position: fixed; /* Hace que el header sea fijo */
+    position: absolute; /* Hace que el header sea fijo */
     top: 0; /* Alinea el header en la parte superior */
     width: 100%; /* Asegura que el header tenga un ancho completo */
     z-index: 1000;
@@ -128,6 +127,9 @@ nav {
   
     display: flex;
     justify-content: center;
+    color: var(--white-color);
+    font-size: 1.8rem;
+    font-weight: bold;
 }
 
 nav a {
@@ -150,10 +152,10 @@ nav a.active {
 
 
 /* This is the main section */
-
-main {
-    margin-top: 108px; /* Ajusta este valor según la altura real de tu header */
-}
+/* 
+/* main {
+    margin-top: 108px; /* Ajusta este valor según la altura real de tu header 
+}  */
 
 /*This part is main section presentation*/
 
@@ -165,7 +167,7 @@ main {
     justify-content: center;
     text-align: center;
     width: 100%;
-    height: 82vh;
+    height: 100vh;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -175,15 +177,18 @@ main {
 
 .main__section--presentacion--background{
     width: 100%;
-    height: 82vh;
-    background-color: var(--button-color);
+    height: 100vh;
+    background-color: #003366;
     top: 0;
     position: absolute;
-    opacity: 0.6;
+    opacity: 0.4;
+    z-index: 0;
 }
 
 .main__section--presentacion--son{
     margin-bottom: 20px;
+    position: absolute;
+    z-index: 8; 
 }
 
 .main__section--presentacion-logo{
@@ -195,6 +200,7 @@ main {
 .main__section--presentacion h1 {
     font-size: 6.4rem;
     color: var(--white-color);
+    top: 180px;
 }
 
 .main__section--presentacion p {
@@ -202,6 +208,7 @@ main {
     color: var(--white-color);
     line-height: 1.6;
     font-weight: 500;
+    top: 260px;
 }
 
 .contact-button {
@@ -216,6 +223,7 @@ main {
     border-radius: 5px; /* Opcional: añade redondeo a tu botón */
     transition: background-color 0.3s ease, color 0.3s ease;
     font-weight: 500;
+    top: 340px;
 }
 
 .main__section--presentacion .contact-button:hover {
