--- a/css/desktop.css
+++ b/css/desktop.css
@@ -97,7 +97,7 @@ html{
 /*Header*/
 
 
-header {
+.main__section--presentacion--header{
     display: flex;
     align-items: center;
     justify-content: space-between; /* Alinea los elementos al inicio, manteniendo el logo a la izquierda */
@@ -241,7 +241,7 @@ nav a.active {
 
 
 .main__section--quienessomos {
-    padding: 0 90px 90px 90px;
+    padding: 45px 90px 90px 90px;
     width: 100%;
     display: flex;
     flex-direction: column;
